panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__struct__test_struct_types_forward_declared_in_different_scopes_are_distinct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/struct/test_struct_types_forward_declared_in_different_scopes_are_distinct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_struct_types_forward_declared_in_different_scopes_are_distinct.c"
   (function-definition external
      f1~0 `fn() -> void`
      (compound-statement
         (definition p1~3 `ptr<struct T~2>` ∅)
         (definition p2~4 `ptr<struct T~2>` ∅)))
   (function-definition external
      f2~5 `fn() -> void`
      (compound-statement
         (definition p1~8 `ptr<struct T~7>` ∅)
         (definition p2~9 `ptr<struct T~7>` ∅))))

----- stderr -----
